Fix bts whitespace below footer

--- a/public/styles/_hero.scss
+++ b/public/styles/_hero.scss
@@ -45,6 +45,7 @@
 .behind-hero-image {
   @extend .contact-hero-image;
   background-image: url('../assets/ashi-kesang.jpg');
+  height: 74vh;
 }
 
 .video_contain {
