--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -79,12 +79,12 @@ a {
 }
 
 .password-form {
-  margin: 300px auto 0 auto;
-  max-width: 50%;
+  margin: 50vh auto 0 auto;
 
   #password-field {
     display: block;
-    width: 500px;
+    width: 70%;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
